--- a/www/index.html
+++ b/www/index.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>moo data</title>
-<style>
+	<head>
+		<meta charset="UTF-8">
+		<title>Dairy Data</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
+		<link rel="stylesheet" href="css/main.css" media="screen">
+	</head>
+	<body>
+	    <div class="navbar navbar-default navbar-fixed-top">
+	      <div class="container">
+		<div class="navbar-header">
+		  <a href="../" class="navbar-brand">Dairy Data</a>
+		  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+		    <span class="icon-bar"></span>
+		    <span class="icon-bar"></span>
+		    <span class="icon-bar"></span>
+		  </button>
+		</div>
+		<div class="navbar-collapse collapse" id="navbar-main">        
+		  <ul class="nav navbar-nav navbar-right">
+		    <li><a href="mailto:ernstjjordaan@gmail.com" target="_blank">Help</a></li>           
+		  </ul>
+		</div>
+	      </div>
+	    </div>
+	    <div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<!-- 4:3 aspect ratio -->
+				<div class="embed-responsive embed-responsive-4by3">
+				  <iframe class="embed-responsive-item" src="http://tmnsimulation.sharepoint.com/_layouts/15/guestaccess.aspx?guestaccesstoken=vN0njMkEpG6myN69jUJjNYBgiFe0ywQUSp9%2fZiEhzqs%3d&docid=013fd00e2227348b79665cf5aad5b4f33&action=embedview&wdbipreview=true&wdAllowInteractivity=True"></iframe>
+				</div>
+				<div class="overlayClass"></div>		
+			</div>
+		</div>      
+	      <footer>
+		<div class="row">
+		  <div class="col-lg-12">        
+		    <p>Made by <a href="#" rel="nofollow">Ernst Jordaan</a>. Contact him at <a href="mailto:ernstjjordaan@gmail.com"<span>ernstjjordaan@gmail.com</span></a>.</p>                        
+		  </div>
+		</div>
+	      </footer>
+	    </div>
 	
-	h2{
-		padding-left:70px;
-	}
-	
-	#graphFrame{
-		padding-left:70px;
-	}
-	
-	.overlayClass {
-	  z-index: 1001;
-	  position: absolute;
-	  top: 1042px;
-	  left: 0;
-	  background-color: white;
-	  width: 1400px;
-	  height: 27px;
-	  float: right;
-	}
-</style>
-</head>
-
-<body>
-	<h2>Moo data</h2>
-	<div id="frameDiv" style="z-index:1000;">
-		<iframe id="graphFrame" width="1250" height="1000"  frameborder="0" scrolling="no" src="http://tmnsimulation.sharepoint.com/_layouts/15/guestaccess.aspx?guestaccesstoken=vN0njMkEpG6myN69jUJjNYBgiFe0ywQUSp9%2fZiEhzqs%3d&docid=013fd00e2227348b79665cf5aad5b4f33&action=embedview&wdbipreview=true&wdAllowInteractivity=True"></iframe>
-	</div>
-	<div class="overlayClass"></div>
-</body>
-
+	    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	    <script src="js/bootstrap.min.js"></script>
+	</body>
 </html>
