--- a/index.html
+++ b/index.html
@@ -26,24 +26,26 @@
 		</div>
 	      </div>
 	    </div>
-	    <div class="container">
-		<div class="row">
-			<div class="col-sm-12">
+	    <!--<div class="container">-->
+		<div class="row margin-top-50">
+			<div class="col-md-12">
 				<!-- 4:3 aspect ratio -->
-				<div class="embed-responsive embed-responsive-4by3">
+				<div class="embed-responsive embed-responsive-4by3" style="z-index: 1000;">
 				  <iframe class="embed-responsive-item" src="http://tmnsimulation.sharepoint.com/_layouts/15/guestaccess.aspx?guestaccesstoken=vN0njMkEpG6myN69jUJjNYBgiFe0ywQUSp9%2fZiEhzqs%3d&docid=013fd00e2227348b79665cf5aad5b4f33&action=embedview&wdbipreview=true&wdAllowInteractivity=True"></iframe>
 				</div>
 				<div class="overlayClass"></div>		
 			</div>
-		</div>      
-	      <footer>
-		<div class="row">
-		  <div class="col-lg-12">        
-		    <p>Made by <a href="#" rel="nofollow">Ernst Jordaan</a>. Contact him at <a href="mailto:ernstjjordaan@gmail.com"<span>ernstjjordaan@gmail.com</span></a>.</p>                        
-		  </div>
 		</div>
-	      </footer>
-	    </div>
+	      <div class="container">
+		<footer>
+		  <div class="row">
+		    <div class="col-lg-12">        
+		      <p>Made by <a href="#" rel="nofollow">Ernst Jordaan</a>.</p>
+		    </div>
+		  </div>
+		</footer>
+	      </div>
+	    <!--</div>-->
 	
 	    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	    <script src="js/bootstrap.min.js"></script>
